<resources>
    <string name="app_name">On Mangue quoi ?</string>
    <string name="titre1">Ramen ta fraise</string>
    <string name="titre2">C\'est nippon ni mauvais</string>
    <string name="entree_title">Entrées</string>
    <string name="plat_title">Plats</string>
    <string name="dessert_title">Desserts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="first_name">Firstname</string>
    <string name="last_name">Lastname</string>
    <string name="address">Address</string>

    <!-- Order strings -->
    <string name="orderTitle">Envoi de la commande</string>
    <string name="orderSuccess">Nous vous remercions de votre commande !</string>
    <string name="orderFail">Une erreur est survenue lors de l\'envoi</string>

</resources>