<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogin"
    android:orientation="vertical"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:id="@+id/vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393">

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Register"
            android:textAlignment="center"
            android:textColor="#FFEB3B"
            android:textSize="50sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/architects_daughter"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/architects_daughter"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/architects_daughter"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:padding="15dp"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/architects_daughter"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/architects_daughter"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="#000000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#F44336"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/register"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_arrow_right" />

        <TextView
            android:id="@+id/swipeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/swipe_right_for_login"
            android:textColor="#FFEB3B"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

