<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="625dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-2dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_subtitle"
            android:layout_marginStart="25dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Login"
            android:textColor="#FFEB3B"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/address"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/tag"
            android:textColor="#FFEB3B"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/logEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@id/email"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/architects_daughter"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/logPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/architects_daughter"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="#000000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#F44336"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/login"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_above="@id/swipeRight"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="47dp"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:id="@+id/swipeRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/swipe_left_for_register"
            android:textColor="#FFEB3B"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>